tests/ui/traits/non_lifetime_binders/bad-copy-cond.stderr
error[E0277]: the trait bound `T: Copy` is not satisfied
  --> $DIR/bad-copy-cond.rs:6:5
   |
LL |     foo();
   |     ^^^^^ the trait `Copy` is not implemented for `T`
   |
note: required by a bound in `foo`
  --> $DIR/bad-copy-cond.rs:3:26
   |
LL | fn foo() where for<T> T: Copy {}
   |                          ^^^^ required by this bound in `foo`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
